--- a/CapaPresentacion/Report6.rdlc
+++ b/CapaPresentacion/Report6.rdlc
@@ -6,21 +6,21 @@
         <TablixBody>
           <TablixColumns>
             <TablixColumn>
-              <Width>4.1275cm</Width>
+              <Width>2.21211cm</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>4.1275cm</Width>
+              <Width>2.21211cm</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>4.1275cm</Width>
+              <Width>2.21211cm</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>4.1275cm</Width>
+              <Width>2.21211cm</Width>
             </TablixColumn>
           </TablixColumns>
           <TablixRows>
             <TablixRow>
-              <Height>0.81167cm</Height>
+              <Height>0.6cm</Height>
               <TablixCells>
                 <TablixCell>
                   <CellContents>
@@ -169,7 +169,7 @@
               </TablixCells>
             </TablixRow>
             <TablixRow>
-              <Height>0.81167cm</Height>
+              <Height>0.6cm</Height>
               <TablixCells>
                 <TablixCell>
                   <CellContents>
@@ -325,55 +325,25 @@
             </TablixMember>
           </TablixMembers>
         </TablixRowHierarchy>
-        <DataSetName>DataSet1</DataSetName>
+        <DataSetName>DataSet3</DataSetName>
         <Top>0.14111cm</Top>
-        <Left>1.6275cm</Left>
-        <Height>1.62334cm</Height>
-        <Width>16.51cm</Width>
+        <Left>4.15682cm</Left>
+        <Height>1.2cm</Height>
+        <Width>8.84845cm</Width>
         <Style>
           <Border>
             <Style>None</Style>
           </Border>
         </Style>
       </Tablix>
-      <Textbox Name="Textbox12">
-        <CanGrow>true</CanGrow>
-        <KeepTogether>true</KeepTogether>
-        <Paragraphs>
-          <Paragraph>
-            <TextRuns>
-              <TextRun>
-                <Value />
-                <Style />
-              </TextRun>
-            </TextRuns>
-            <Style />
-          </Paragraph>
-        </Paragraphs>
-        <rd:DefaultName>Textbox12</rd:DefaultName>
-        <Top>0.03528cm</Top>
-        <Left>1.6275cm</Left>
-        <Height>0.6cm</Height>
-        <Width>2.5cm</Width>
-        <ZIndex>1</ZIndex>
-        <Style>
-          <Border>
-            <Style>None</Style>
-          </Border>
-          <PaddingLeft>2pt</PaddingLeft>
-          <PaddingRight>2pt</PaddingRight>
-          <PaddingTop>2pt</PaddingTop>
-          <PaddingBottom>2pt</PaddingBottom>
-        </Style>
-      </Textbox>
     </ReportItems>
-    <Height>3.47613in</Height>
+    <Height>2.95877in</Height>
     <Style />
   </Body>
-  <Width>7.96875in</Width>
+  <Width>6.64167in</Width>
   <Page>
     <PageHeader>
-      <Height>1.69913cm</Height>
+      <Height>2.54cm</Height>
       <PrintOnFirstPage>true</PrintOnFirstPage>
       <PrintOnLastPage>true</PrintOnLastPage>
       <ReportItems>
@@ -381,7 +351,6 @@
           <Source>Embedded</Source>
           <Value>Electrosurlogo</Value>
           <Sizing>FitProportional</Sizing>
-          <Top>0.00911cm</Top>
           <Height>0.78562cm</Height>
           <Width>3.28401cm</Width>
           <Style>
@@ -400,7 +369,7 @@
                   <Value>        Reporte Motivo Movimiento</Value>
                   <Style>
                     <FontFamily>Arial Black</FontFamily>
-                    <FontSize>12pt</FontSize>
+                    <FontSize>11pt</FontSize>
                     <FontWeight>Bold</FontWeight>
                   </Style>
                 </TextRun>
@@ -409,8 +378,8 @@
             </Paragraph>
           </Paragraphs>
           <rd:DefaultName>Textbox9</rd:DefaultName>
-          <Top>0.00911cm</Top>
-          <Left>6.50465cm</Left>
+          <Top>0.01269cm</Top>
+          <Left>4.73735cm</Left>
           <Height>0.78562cm</Height>
           <Width>8.26792cm</Width>
           <ZIndex>1</ZIndex>
@@ -442,8 +411,8 @@
             </Paragraph>
           </Paragraphs>
           <rd:DefaultName>Textbox18</rd:DefaultName>
-          <Top>0.79473cm</Top>
-          <Left>10.3531cm</Left>
+          <Top>0.83359cm</Top>
+          <Left>7.57092cm</Left>
           <Height>0.50794cm</Height>
           <Width>2.5cm</Width>
           <ZIndex>2</ZIndex>
@@ -474,10 +443,10 @@
             </Paragraph>
           </Paragraphs>
           <rd:DefaultName>Textbox1</rd:DefaultName>
-          <Top>0.79473cm</Top>
-          <Left>8.77914cm</Left>
+          <Top>0.83359cm</Top>
+          <Left>6.61079cm</Left>
           <Height>0.50794cm</Height>
-          <Width>1.57396cm</Width>
+          <Width>0.96013cm</Width>
           <ZIndex>3</ZIndex>
           <Style>
             <Border>
@@ -506,7 +475,7 @@
             </Paragraph>
           </Paragraphs>
           <rd:DefaultName>Textbox4</rd:DefaultName>
-          <Left>17.74062cm</Left>
+          <Left>14.36984cm</Left>
           <Height>0.6cm</Height>
           <Width>2.5cm</Width>
           <ZIndex>4</ZIndex>
@@ -539,7 +508,7 @@
           </Paragraphs>
           <rd:DefaultName>Textbox18</rd:DefaultName>
           <Top>0.6cm</Top>
-          <Left>17.74062cm</Left>
+          <Left>13.96767cm</Left>
           <Height>0.50794cm</Height>
           <Width>2.5cm</Width>
           <ZIndex>5</ZIndex>
@@ -571,7 +540,7 @@
           </Paragraphs>
           <rd:DefaultName>Textbox4</rd:DefaultName>
           <Top>1.10794cm</Top>
-          <Left>17.74062cm</Left>
+          <Left>14.36984cm</Left>
           <Height>0.52063cm</Height>
           <Width>2.5cm</Width>
           <ZIndex>6</ZIndex>
@@ -626,9 +595,10 @@
             </Paragraph>
           </Paragraphs>
           <rd:DefaultName>Textbox8</rd:DefaultName>
-          <Left>1.79763cm</Left>
+          <Top>0.17639cm</Top>
+          <Left>1.72707cm</Left>
           <Height>0.6cm</Height>
-          <Width>2.2946cm</Width>
+          <Width>3.07777cm</Width>
           <Style>
             <Border>
               <Style>None</Style>
@@ -656,7 +626,7 @@
             </Paragraph>
           </Paragraphs>
           <rd:DefaultName>Textbox11</rd:DefaultName>
-          <Left>0.07056cm</Left>
+          <Top>0.17639cm</Top>
           <Height>0.6cm</Height>
           <Width>1.65651cm</Width>
           <ZIndex>1</ZIndex>
@@ -687,7 +657,8 @@
             </Paragraph>
           </Paragraphs>
           <rd:DefaultName>Textbox13</rd:DefaultName>
-          <Left>4.1275cm</Left>
+          <Top>0.17639cm</Top>
+          <Left>5.36927cm</Left>
           <Height>0.6cm</Height>
           <Width>2.5cm</Width>
           <ZIndex>2</ZIndex>
@@ -718,7 +689,8 @@
             </Paragraph>
           </Paragraphs>
           <rd:DefaultName>Textbox13</rd:DefaultName>
-          <Left>17.74062cm</Left>
+          <Top>0.10583cm</Top>
+          <Left>14.36984cm</Left>
           <Height>0.6cm</Height>
           <Width>2.5cm</Width>
           <ZIndex>3</ZIndex>
@@ -750,18 +722,18 @@
   </Page>
   <AutoRefresh>0</AutoRefresh>
   <DataSources>
-    <DataSource Name="ActivosFijosDataSet1">
+    <DataSource Name="ActivosFijosDataSet2">
       <ConnectionProperties>
         <DataProvider>System.Data.DataSet</DataProvider>
         <ConnectString>/* Local Connection */</ConnectString>
       </ConnectionProperties>
-      <rd:DataSourceID>a082b979-c11b-4776-8aa3-d14b083e428b</rd:DataSourceID>
+      <rd:DataSourceID>c1a03de8-889b-44ee-9a43-4cdbddb48557</rd:DataSourceID>
     </DataSource>
   </DataSources>
   <DataSets>
-    <DataSet Name="DataSet1">
+    <DataSet Name="DataSet3">
       <Query>
-        <DataSourceName>ActivosFijosDataSet1</DataSourceName>
+        <DataSourceName>ActivosFijosDataSet2</DataSourceName>
         <CommandText>/* Local Query */</CommandText>
       </Query>
       <Fields>
@@ -783,8 +755,8 @@
         </Field>
       </Fields>
       <rd:DataSetInfo>
-        <rd:DataSetName>ActivosFijosDataSet1</rd:DataSetName>
-        <rd:SchemaPath>C:\Users\DARIEL\Desktop\Activos Fijos V1\ActivosFijos_v1.1\CapaPresentacion\ActivosFijosDataSet1.xsd</rd:SchemaPath>
+        <rd:DataSetName>ActivosFijosDataSet2</rd:DataSetName>
+        <rd:SchemaPath>C:\Users\jacho\Documents\GitHub\Prueba\CapaPresentacion\ActivosFijosDataSet2.xsd</rd:SchemaPath>
         <rd:TableName>acfMVMt_MotivoMovimiento</rd:TableName>
         <rd:TableAdapterFillMethod>Fill</rd:TableAdapterFillMethod>
         <rd:TableAdapterGetDataMethod>GetData</rd:TableAdapterGetDataMethod>
@@ -810,5 +782,5 @@ uM4h6XyVh91PQt91Lr3mRM0nh9vr8fvDnJ/qIzhsHLWZ58nDOUspwCbhb4NmvzHsP7+W3k0O54asMBO8
     </EmbeddedImage>
   </EmbeddedImages>
   <rd:ReportUnitType>Cm</rd:ReportUnitType>
-  <rd:ReportID>02578972-52d7-43c6-b3d4-a3926587f6ec</rd:ReportID>
+  <rd:ReportID>2ad7bcc3-e7e6-4f55-9faf-4220bbb52593</rd:ReportID>
 </Report>
