--- a/CapaPresentacion/Reportes/Rpt_Movimiento_Activo.rdlc
+++ b/CapaPresentacion/Reportes/Rpt_Movimiento_Activo.rdlc
@@ -35,7 +35,7 @@
         <rd:DefaultName>Textbox1</rd:DefaultName>
         <Left>6.19821cm</Left>
         <Height>0.6cm</Height>
-        <Width>5.3575cm</Width>
+        <Width>5.72792cm</Width>
         <ZIndex>1</ZIndex>
         <Style>
           <Border>
@@ -635,7 +635,7 @@
         <KeepTogether>true</KeepTogether>
         <Top>2.43691cm</Top>
         <Left>0.02832cm</Left>
-        <Height>4.33255cm</Height>
+        <Height>3.77693cm</Height>
         <Width>8.47014cm</Width>
         <ZIndex>5</ZIndex>
         <Style>
@@ -662,7 +662,7 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox23</rd:DefaultName>
-        <Top>7.14871cm</Top>
+        <Top>6.4076cm</Top>
         <Left>0.02832cm</Left>
         <Height>0.6cm</Height>
         <Width>1.60042cm</Width>
@@ -709,7 +709,7 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox23</rd:DefaultName>
-        <Top>7.88982cm</Top>
+        <Top>7.14871cm</Top>
         <Left>0.02832cm</Left>
         <Height>0.6cm</Height>
         <Width>4.405cm</Width>
@@ -760,7 +760,9 @@
                           <TextRuns>
                             <TextRun>
                               <Value>Código AF</Value>
-                              <Style />
+                              <Style>
+                                <FontFamily>Arial Narrow</FontFamily>
+                              </Style>
                             </TextRun>
                           </TextRuns>
                           <Style>
@@ -793,7 +795,9 @@
                           <TextRuns>
                             <TextRun>
                               <Value>Descripción</Value>
-                              <Style />
+                              <Style>
+                                <FontFamily>Arial Narrow</FontFamily>
+                              </Style>
                             </TextRun>
                           </TextRuns>
                           <Style>
@@ -826,7 +830,9 @@
                           <TextRuns>
                             <TextRun>
                               <Value>Marca</Value>
-                              <Style />
+                              <Style>
+                                <FontFamily>Arial Narrow</FontFamily>
+                              </Style>
                             </TextRun>
                           </TextRuns>
                           <Style>
@@ -859,7 +865,9 @@
                           <TextRuns>
                             <TextRun>
                               <Value>N° Serie</Value>
-                              <Style />
+                              <Style>
+                                <FontFamily>Arial Narrow</FontFamily>
+                              </Style>
                             </TextRun>
                           </TextRuns>
                           <Style>
@@ -892,7 +900,9 @@
                           <TextRuns>
                             <TextRun>
                               <Value>Modelo</Value>
-                              <Style />
+                              <Style>
+                                <FontFamily>Arial Narrow</FontFamily>
+                              </Style>
                             </TextRun>
                           </TextRuns>
                           <Style>
@@ -925,7 +935,9 @@
                           <TextRuns>
                             <TextRun>
                               <Value>Activo Padre</Value>
-                              <Style />
+                              <Style>
+                                <FontFamily>Arial Narrow</FontFamily>
+                              </Style>
                             </TextRun>
                           </TextRuns>
                           <Style>
@@ -962,8 +974,23 @@
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
+                              <Value>=Trim(Fields!ACFtipo_activo.Value)</Value>
+                              <Style>
+                                <FontFamily>Arial Narrow</FontFamily>
+                                <FontSize>8pt</FontSize>
+                              </Style>
+                            </TextRun>
+                            <TextRun>
+                              <Value xml:space="preserve"> </Value>
+                              <Style>
+                                <FontFamily>Arial Narrow</FontFamily>
+                                <FontSize>8pt</FontSize>
+                              </Style>
+                            </TextRun>
+                            <TextRun>
                               <Value>=Trim(Fields!ACFid.Value)</Value>
                               <Style>
+                                <FontFamily>Arial Narrow</FontFamily>
                                 <FontSize>8pt</FontSize>
                               </Style>
                             </TextRun>
@@ -996,6 +1023,7 @@
                             <TextRun>
                               <Value>=Trim(Fields!ACFdescripcion.Value)</Value>
                               <Style>
+                                <FontFamily>Arial Narrow</FontFamily>
                                 <FontSize>8pt</FontSize>
                               </Style>
                             </TextRun>
@@ -1028,6 +1056,7 @@
                             <TextRun>
                               <Value>=Trim(Fields!MARmarca.Value)</Value>
                               <Style>
+                                <FontFamily>Arial Narrow</FontFamily>
                                 <FontSize>8pt</FontSize>
                               </Style>
                             </TextRun>
@@ -1060,6 +1089,7 @@
                             <TextRun>
                               <Value>=Trim(Fields!CRSserie.Value)</Value>
                               <Style>
+                                <FontFamily>Arial Narrow</FontFamily>
                                 <FontSize>8pt</FontSize>
                               </Style>
                             </TextRun>
@@ -1092,6 +1122,7 @@
                             <TextRun>
                               <Value>=Trim(Fields!CRSmodelo.Value)</Value>
                               <Style>
+                                <FontFamily>Arial Narrow</FontFamily>
                                 <FontSize>8pt</FontSize>
                               </Style>
                             </TextRun>
@@ -1123,6 +1154,7 @@
                             <TextRun>
                               <Value>=Trim(Fields!ACFid_Padre.Value)</Value>
                               <Style>
+                                <FontFamily>Arial Narrow</FontFamily>
                                 <FontSize>8pt</FontSize>
                               </Style>
                             </TextRun>
@@ -1136,7 +1168,9 @@
                           <Color>LightGrey</Color>
                           <Style>Solid</Style>
                         </Border>
+                        <PaddingLeft>2pt</PaddingLeft>
                         <PaddingRight>2pt</PaddingRight>
+                        <PaddingTop>2pt</PaddingTop>
                         <PaddingBottom>2pt</PaddingBottom>
                       </Style>
                     </Textbox>
@@ -1167,7 +1201,7 @@
           </TablixMembers>
         </TablixRowHierarchy>
         <DataSetName>DataSet1</DataSetName>
-        <Top>8.48982cm</Top>
+        <Top>7.74871cm</Top>
         <Left>0.02832cm</Left>
         <Height>1.2cm</Height>
         <Width>16.39471cm</Width>
@@ -1212,7 +1246,7 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox23</rd:DefaultName>
-        <Top>9.68982cm</Top>
+        <Top>8.94871cm</Top>
         <Left>0.09193cm</Left>
         <Height>0.6cm</Height>
         <Width>4.405cm</Width>
@@ -1385,7 +1419,7 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox53</rd:DefaultName>
-        <Top>7.14871cm</Top>
+        <Top>6.4076cm</Top>
         <Left>1.62874cm</Left>
         <Height>0.6cm</Height>
         <Width>2.80458cm</Width>
@@ -1579,7 +1613,6 @@
               </Paragraph>
             </Paragraphs>
             <rd:DefaultName>Textbox4</rd:DefaultName>
-            <Top>0cm</Top>
             <Left>2.12958cm</Left>
             <Height>0.65292cm</Height>
             <Width>1.62688cm</Width>
@@ -1892,7 +1925,7 @@
         <KeepTogether>true</KeepTogether>
         <Top>2.43691cm</Top>
         <Left>8.49846cm</Left>
-        <Height>4.33255cm</Height>
+        <Height>3.77693cm</Height>
         <Width>8.2761cm</Width>
         <ZIndex>13</ZIndex>
         <Style>
@@ -2221,14 +2254,10 @@
         </Style>
       </Textbox>
     </ReportItems>
-    <Height>7.47455in</Height>
-    <Style>
-      <Border>
-        <Style>None</Style>
-      </Border>
-    </Style>
+    <Height>6.31706in</Height>
+    <Style />
   </Body>
-  <Width>6.62215in</Width>
+  <Width>6.60416in</Width>
   <Page>
     <PageHeight>29.7cm</PageHeight>
     <PageWidth>21cm</PageWidth>
@@ -2246,7 +2275,7 @@
         <DataProvider>System.Data.DataSet</DataProvider>
         <ConnectString>/* Local Connection */</ConnectString>
       </ConnectionProperties>
-      <rd:DataSourceID>7a3e1b78-a3ca-4368-b195-20f76421d2fc</rd:DataSourceID>
+      <rd:DataSourceID>84e947c2-db9c-48dd-ad4e-2a0ec9b59115</rd:DataSourceID>
     </DataSource>
   </DataSources>
   <DataSets>
@@ -2384,6 +2413,10 @@
           <DataField>ACFid_Padre</DataField>
           <rd:TypeName>System.String</rd:TypeName>
         </Field>
+        <Field Name="ACFtipo_activo">
+          <DataField>ACFtipo_activo</DataField>
+          <rd:TypeName>System.String</rd:TypeName>
+        </Field>
       </Fields>
       <rd:DataSetInfo>
         <rd:DataSetName>DataSet1</rd:DataSetName>
@@ -2419,5 +2452,5 @@ uM4h6XyVh91PQt91Lr3mRM0nh9vr8fvDnJ/qIzhsHLWZ58nDOUspwCbhb4NmvzHsP7+W3k0O54asMBO8
     </EmbeddedImage>
   </EmbeddedImages>
   <rd:ReportUnitType>Cm</rd:ReportUnitType>
-  <rd:ReportID>f3c265a8-b010-41d1-ae3b-0bcac2725c4f</rd:ReportID>
+  <rd:ReportID>4056c072-0413-40dc-9a8e-3762b2e1c8f5</rd:ReportID>
 </Report>
