--- a/CapaPresentacion/Reportes/Rpt_Depreciacion1.rdlc
+++ b/CapaPresentacion/Reportes/Rpt_Depreciacion1.rdlc
@@ -207,70 +207,70 @@
         <TablixBody>
           <TablixColumns>
             <TablixColumn>
-              <Width>4.32563cm</Width>
+              <Width>1.84383cm</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>2.5cm</Width>
+              <Width>1.84383cm</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>2.5cm</Width>
+              <Width>1.84383cm</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>2.5cm</Width>
+              <Width>1.84383cm</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>2.5cm</Width>
+              <Width>1.84383cm</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>2.5cm</Width>
+              <Width>1.84383cm</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>2.5cm</Width>
+              <Width>1.84383cm</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>2.5cm</Width>
+              <Width>1.84383cm</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>2.5cm</Width>
+              <Width>1.84383cm</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>2.5cm</Width>
+              <Width>1.84383cm</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>2.5cm</Width>
+              <Width>1.84383cm</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>2.5cm</Width>
+              <Width>1.84383cm</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>2.5cm</Width>
+              <Width>1.84383cm</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>2.5cm</Width>
+              <Width>1.84383cm</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>2.5cm</Width>
+              <Width>1.84383cm</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>2.5cm</Width>
+              <Width>1.84383cm</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>2.5cm</Width>
+              <Width>1.84383cm</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>2.5cm</Width>
+              <Width>1.84383cm</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>2.5cm</Width>
+              <Width>1.84383cm</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>2.5cm</Width>
+              <Width>1.84383cm</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>2.5cm</Width>
+              <Width>1.84383cm</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>2.5cm</Width>
+              <Width>1.84383cm</Width>
             </TablixColumn>
           </TablixColumns>
           <TablixRows>
@@ -295,7 +295,10 @@
                             </TextRun>
                             <TextRun>
                               <Value>=Fields!Zona.Value</Value>
-                              <Style />
+                              <Style>
+                                <FontFamily>Arial Narrow</FontFamily>
+                                <FontSize>8pt</FontSize>
+                              </Style>
                             </TextRun>
                           </TextRuns>
                           <Style />
@@ -534,7 +537,7 @@
               </TablixCells>
             </TablixRow>
             <TablixRow>
-              <Height>0.6cm</Height>
+              <Height>0.93867cm</Height>
               <TablixCells>
                 <TablixCell>
                   <CellContents>
@@ -666,6 +669,7 @@
                         <PaddingBottom>2pt</PaddingBottom>
                       </Style>
                     </Textbox>
+                    <rd:Selected>true</rd:Selected>
                   </CellContents>
                 </TablixCell>
                 <TablixCell>
@@ -2268,6 +2272,7 @@
                               <Value>=Fields!SaldoInicial.Value</Value>
                               <Style>
                                 <FontFamily>Arial Narrow</FontFamily>
+                                <FontSize>8pt</FontSize>
                               </Style>
                             </TextRun>
                           </TextRuns>
@@ -2300,6 +2305,7 @@
                               <Value>=Fields!Ajustesi.Value</Value>
                               <Style>
                                 <FontFamily>Arial Narrow</FontFamily>
+                                <FontSize>8pt</FontSize>
                               </Style>
                             </TextRun>
                           </TextRuns>
@@ -2332,6 +2338,7 @@
                               <Value>=Fields!Transferenciai.Value</Value>
                               <Style>
                                 <FontFamily>Arial Narrow</FontFamily>
+                                <FontSize>8pt</FontSize>
                               </Style>
                             </TextRun>
                           </TextRuns>
@@ -2364,6 +2371,7 @@
                               <Value>=Fields!Enero.Value</Value>
                               <Style>
                                 <FontFamily>Arial Narrow</FontFamily>
+                                <FontSize>8pt</FontSize>
                               </Style>
                             </TextRun>
                           </TextRuns>
@@ -2396,6 +2404,7 @@
                               <Value>=Fields!Febrero.Value</Value>
                               <Style>
                                 <FontFamily>Arial Narrow</FontFamily>
+                                <FontSize>8pt</FontSize>
                               </Style>
                             </TextRun>
                           </TextRuns>
@@ -2428,6 +2437,7 @@
                               <Value>=Fields!Marzo.Value</Value>
                               <Style>
                                 <FontFamily>Arial Narrow</FontFamily>
+                                <FontSize>8pt</FontSize>
                               </Style>
                             </TextRun>
                           </TextRuns>
@@ -2460,6 +2470,7 @@
                               <Value>=Fields!Abril.Value</Value>
                               <Style>
                                 <FontFamily>Arial Narrow</FontFamily>
+                                <FontSize>8pt</FontSize>
                               </Style>
                             </TextRun>
                           </TextRuns>
@@ -2492,6 +2503,7 @@
                               <Value>=Fields!Mayo.Value</Value>
                               <Style>
                                 <FontFamily>Arial Narrow</FontFamily>
+                                <FontSize>8pt</FontSize>
                               </Style>
                             </TextRun>
                           </TextRuns>
@@ -2524,6 +2536,7 @@
                               <Value>=Fields!Junio.Value</Value>
                               <Style>
                                 <FontFamily>Arial Narrow</FontFamily>
+                                <FontSize>8pt</FontSize>
                               </Style>
                             </TextRun>
                           </TextRuns>
@@ -2556,6 +2569,7 @@
                               <Value>=Fields!Julio.Value</Value>
                               <Style>
                                 <FontFamily>Arial Narrow</FontFamily>
+                                <FontSize>8pt</FontSize>
                               </Style>
                             </TextRun>
                           </TextRuns>
@@ -2588,6 +2602,7 @@
                               <Value>=Fields!Agosto.Value</Value>
                               <Style>
                                 <FontFamily>Arial Narrow</FontFamily>
+                                <FontSize>8pt</FontSize>
                               </Style>
                             </TextRun>
                           </TextRuns>
@@ -2620,6 +2635,7 @@
                               <Value>=Fields!Setiembre.Value</Value>
                               <Style>
                                 <FontFamily>Arial Narrow</FontFamily>
+                                <FontSize>8pt</FontSize>
                               </Style>
                             </TextRun>
                           </TextRuns>
@@ -2652,6 +2668,7 @@
                               <Value>=Fields!Octubre.Value</Value>
                               <Style>
                                 <FontFamily>Arial Narrow</FontFamily>
+                                <FontSize>8pt</FontSize>
                               </Style>
                             </TextRun>
                           </TextRuns>
@@ -2684,6 +2701,7 @@
                               <Value>=Fields!Noviembre.Value</Value>
                               <Style>
                                 <FontFamily>Arial Narrow</FontFamily>
+                                <FontSize>8pt</FontSize>
                               </Style>
                             </TextRun>
                           </TextRuns>
@@ -2716,6 +2734,7 @@
                               <Value>=Fields!Diciembre.Value</Value>
                               <Style>
                                 <FontFamily>Arial Narrow</FontFamily>
+                                <FontSize>8pt</FontSize>
                               </Style>
                             </TextRun>
                           </TextRuns>
@@ -2748,6 +2767,7 @@
                               <Value>=Fields!Total.Value</Value>
                               <Style>
                                 <FontFamily>Arial Narrow</FontFamily>
+                                <FontSize>8pt</FontSize>
                               </Style>
                             </TextRun>
                           </TextRuns>
@@ -2780,6 +2800,7 @@
                               <Value>=Fields!Retiros.Value</Value>
                               <Style>
                                 <FontFamily>Arial Narrow</FontFamily>
+                                <FontSize>8pt</FontSize>
                               </Style>
                             </TextRun>
                           </TextRuns>
@@ -2812,6 +2833,7 @@
                               <Value>=Fields!Ajustesf.Value</Value>
                               <Style>
                                 <FontFamily>Arial Narrow</FontFamily>
+                                <FontSize>8pt</FontSize>
                               </Style>
                             </TextRun>
                           </TextRuns>
@@ -2844,6 +2866,7 @@
                               <Value>=Fields!Transferenciaf.Value</Value>
                               <Style>
                                 <FontFamily>Arial Narrow</FontFamily>
+                                <FontSize>8pt</FontSize>
                               </Style>
                             </TextRun>
                           </TextRuns>
@@ -2876,6 +2899,7 @@
                               <Value>=Fields!Total.Value</Value>
                               <Style>
                                 <FontFamily>Arial Narrow</FontFamily>
+                                <FontSize>8pt</FontSize>
                               </Style>
                             </TextRun>
                           </TextRuns>
@@ -2908,6 +2932,7 @@
                               <Value>=Fields!SaldoFinal.Value</Value>
                               <Style>
                                 <FontFamily>Arial Narrow</FontFamily>
+                                <FontSize>8pt</FontSize>
                               </Style>
                             </TextRun>
                           </TextRuns>
@@ -3067,6 +3092,7 @@
                               <Value>=Sum(Fields!Enero.Value)</Value>
                               <Style>
                                 <FontFamily>Arial Narrow</FontFamily>
+                                <FontSize>8pt</FontSize>
                               </Style>
                             </TextRun>
                           </TextRuns>
@@ -3099,6 +3125,7 @@
                               <Value>=Sum(Fields!Febrero.Value)</Value>
                               <Style>
                                 <FontFamily>Arial Narrow</FontFamily>
+                                <FontSize>8pt</FontSize>
                               </Style>
                             </TextRun>
                           </TextRuns>
@@ -3131,6 +3158,7 @@
                               <Value>=Sum(Fields!Marzo.Value)</Value>
                               <Style>
                                 <FontFamily>Arial Narrow</FontFamily>
+                                <FontSize>8pt</FontSize>
                               </Style>
                             </TextRun>
                           </TextRuns>
@@ -3163,6 +3191,7 @@
                               <Value>=Sum(Fields!Abril.Value)</Value>
                               <Style>
                                 <FontFamily>Arial Narrow</FontFamily>
+                                <FontSize>8pt</FontSize>
                               </Style>
                             </TextRun>
                           </TextRuns>
@@ -3195,6 +3224,7 @@
                               <Value>=Sum(Fields!Mayo.Value)</Value>
                               <Style>
                                 <FontFamily>Arial Narrow</FontFamily>
+                                <FontSize>8pt</FontSize>
                               </Style>
                             </TextRun>
                           </TextRuns>
@@ -3227,6 +3257,7 @@
                               <Value>=Sum(Fields!Junio.Value)</Value>
                               <Style>
                                 <FontFamily>Arial Narrow</FontFamily>
+                                <FontSize>8pt</FontSize>
                               </Style>
                             </TextRun>
                           </TextRuns>
@@ -3259,6 +3290,7 @@
                               <Value>=Sum(Fields!Julio.Value)</Value>
                               <Style>
                                 <FontFamily>Arial Narrow</FontFamily>
+                                <FontSize>8pt</FontSize>
                               </Style>
                             </TextRun>
                           </TextRuns>
@@ -3291,6 +3323,7 @@
                               <Value>=Sum(Fields!Agosto.Value)</Value>
                               <Style>
                                 <FontFamily>Arial Narrow</FontFamily>
+                                <FontSize>8pt</FontSize>
                               </Style>
                             </TextRun>
                           </TextRuns>
@@ -3323,6 +3356,7 @@
                               <Value>=Sum(Fields!Setiembre.Value)</Value>
                               <Style>
                                 <FontFamily>Arial Narrow</FontFamily>
+                                <FontSize>8pt</FontSize>
                               </Style>
                             </TextRun>
                           </TextRuns>
@@ -3355,6 +3389,7 @@
                               <Value>=Sum(Fields!Octubre.Value)</Value>
                               <Style>
                                 <FontFamily>Arial Narrow</FontFamily>
+                                <FontSize>8pt</FontSize>
                               </Style>
                             </TextRun>
                           </TextRuns>
@@ -3387,6 +3422,7 @@
                               <Value>=Sum(Fields!Noviembre.Value)</Value>
                               <Style>
                                 <FontFamily>Arial Narrow</FontFamily>
+                                <FontSize>8pt</FontSize>
                               </Style>
                             </TextRun>
                           </TextRuns>
@@ -3419,6 +3455,7 @@
                               <Value>=Sum(Fields!Diciembre.Value)</Value>
                               <Style>
                                 <FontFamily>Arial Narrow</FontFamily>
+                                <FontSize>8pt</FontSize>
                               </Style>
                             </TextRun>
                           </TextRuns>
@@ -5019,10 +5056,10 @@
           </TablixMembers>
         </TablixRowHierarchy>
         <DataSetName>DataSet1</DataSetName>
-        <Top>4.60057cm</Top>
-        <Left>1.16417cm</Left>
-        <Height>4.2cm</Height>
-        <Width>56.82563cm</Width>
+        <Top>4.53707cm</Top>
+        <Left>0.33867cm</Left>
+        <Height>4.53867cm</Height>
+        <Width>40.56426cm</Width>
         <ZIndex>6</ZIndex>
         <Style>
           <Border>
@@ -5031,13 +5068,13 @@
         </Style>
       </Tablix>
     </ReportItems>
-    <Height>3.46479in</Height>
+    <Height>3.57312in</Height>
     <Style />
   </Body>
   <Width>23.81488in</Width>
   <Page>
-    <PageHeight>29.7cm</PageHeight>
-    <PageWidth>21cm</PageWidth>
+    <PageHeight>27cm</PageHeight>
+    <PageWidth>42cm</PageWidth>
     <LeftMargin>2cm</LeftMargin>
     <RightMargin>2cm</RightMargin>
     <TopMargin>2cm</TopMargin>
